# 2026_URP

./: .gitignore  README.md
back/: .gitignore  docker-compose.yml  pyproject.toml
back/api/: activities.py
back/database/: connection.py  orm.py
back/schema/: request.py
back/script/: bert.py  certification.py  crawler_lab.py  crawler_notice.py  llm.py
back/service/: recommendations.py  users.py
career-test/: index.html  package-lock.json  package.json  vite.config.ts
career-test/src/: App.tsx
front/: index.htm  index.html  index_v2.htm  result.htm  roadmap.htm  student-info.htm  test.htm
front/login/: login.htm  sign-up.htm
front/roadmap/: roadmap.htm  roadmap_1.htm  roadmap_v2.htm
front/student_info/: btn-edit-myinfo.htm  btn-myact.htm  btn-myinfo.htm  btn-student-info.htm  btn-type-history.htm  student-info.htm
front/test/: result.htm  test.htm
new_front/: home.htm  myinfo.htm  recommend.htm  roadmap.htm  test.htm
