[project]
name = "back"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "beautifulsoup4>=4.14.3",
    "bs4>=0.0.2",
    "fastapi>=0.135.1",
    "pymysql>=1.1.2",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv>=1.2.2",
    "requests>=2.32.5",
    "schema>=0.7.8",
    "sqlalchemy>=2.0.48",
    "uvicorn>=0.41.0",
]
